# internal/common/swagger_types.go
@@ -14,3 +14,13 @@ type SwaggerCreatedResponse struct {
 	Status  int    `json:"status" example:"201"`
 	Message string `json:"message" example:"Transaction Created"`
 }
+
+type SwaggerSuccessResponse struct {
+	Status  int    `json:"status" example:"200"`
+	Message string `json:"message" example:"OK"`
+}
+
+type SwaggerBadRequestResponse struct {
+	Status  int    `json:"status"  example:"400"`
+	Message string `json:"message" example:"invalid date format"`
+}
