# internal/responses/category.go
@@ -1,0 +1,8 @@
+package responses
+
+type CategoryResponse struct {
+	ID        uint   `json:"id"`
+	Name      string `json:"name"`
+	IsActive  bool   `json:"is_active"`
+	CreatedAt string `json:"created_at"`
+}
