# internal/responses/transaction.go
@@ -1,9 +1,12 @@
 package responses
 
 type TransactionResponse struct {
+	ID          uint    `json:"id"`
 	Type        string  `json:"type"`
 	Amount      float64 `json:"amount"`
 	Description string  `json:"description"`
 	Category    string  `json:"category"`
+	CategoryID  uint    `json:"category_id"`
 	Date        string  `json:"date"`
+	CreatedAt   string  `json:"created_at"`
 }
